Updates for Java 17 warnings