@@ -1868,10 +1868,10 @@ public class MVStore {
         Collections.sort(old, new Comparator<Chunk>() {
             @Override
             public int compare(Chunk o1, Chunk o2) {
-                int comp = new Integer(o1.collectPriority).
+                int comp = Integer.valueOf(o1.collectPriority).
                         compareTo(o2.collectPriority);
                 if (comp == 0) {
-                    comp = new Long(o1.maxLenLive).
+                    comp = Long.valueOf(o1.maxLenLive).
                         compareTo(o2.maxLenLive);
                 }
                 return comp;
